Only render the changed sprites while not playing.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="menu">
 				<h1>Groove - Prototype Stage Demo</h1>
 			</div>
-			<div class="divider"><p>Stage (no set aspect ratio)</p></div>
+			<div class="divider"><p>Stage (no set aspect ratio)</p> <div id="transformSelect"></div></div>
 			<div id="stageWrapper"><div id="stage"></div></div>
 			
 			<div class="divider"><p>Sprite List (list of all sprites in scene) <button onclick="newSprite();">new</button></p></div>
