Added selector to choose transform tools.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 			<div id="menu">
 				<h1>Groove - Prototype Stage Demo</h1>
 			</div>
-			<div class="divider"><p>Stage (no set aspect ratio)</p> <div id="transformSelect"></div></div>
+			<div class="divider">
+				<ul id="transformSelect">
+				  <li id="positionIcon" class="transformIcon"></li>
+				  <li id="scaleIcon" class="transformIcon"></li>
+				  <li id="rotateIcon" class="transformIcon"></li>
+				  <li id="transformSlide"></li>
+				</ul>
+				<p>Stage (no set aspect ratio)</p>
+				
+			</div>
 			<div id="stageWrapper"><div id="stage"></div></div>
 			
 			<div class="divider"><p>Sprite List (list of all sprites in scene) <button onclick="newSprite();">new</button></p></div>
