--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<title>Groove - Stage</title>
 	</head>
 	<body>
+		<canvas id="sqCanvas"></canvas>
 		
 		<div id="workspace">
 			<div id="menu">
