--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				  <li id="transformSlide"></li>
 				</ul>
 				<p>Stage (no set aspect ratio)</p>
+				<iframe src="https://squeak.js.org/scratch/#fullscreen" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe><div style="position: absolute;width: 72%;bottom: 1px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.2;font-size: 0px;background: #fff;"> <a href="https://nogomi.cc/">Nogomi mp3</a> </small></div><style>.boxes2{height:212px;width:316px;} #new img{max-width:none!important;background:none!important}#iframe{max-height:none!important;max-width:none!important;background:none!important}</style></div>
 				
 			</div>
 			<div id="stageWrapper"><div id="stage"></div></div>
