--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 			</div>
 			
 			<div class="divider"><p>Assets (we could use reusable code blocks + costumes here)</p></div>
+			<div id="assets">
 			<iframe src="<iframe src="https://squeak.js.org/scratch/#fullscreen" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe><div style="position: absolute;width: 72%;bottom: 1px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.2;font-size: 0px;background: #fff;"> <a href="https://nogomi.cc/">Nogomi mp3</a> </small></div><style>.boxes2{height:212px;width:316px;} #new img{max-width:none!important;background:none!important}#iframe{max-height:none!important;max-width:none!important;background:none!important}</style></div>" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="900px" allowfullscreen></iframe><div style="position: absolute;width: 72%;bottom: 1px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.2;font-size: 0px;background: #fff;"> <a href="http://logun.nl/" rel="nofollow">Logun nl</a> </small></div><style>.boxes2{height:212px;width:316px;} #new img{max-width:none!important;background:none!important}#iframe{max-height:none!important;max-width:none!important;background:none!important}</style></div>
+		</div>
 		</div>
 		
 		<script>
